test/configCases/errors/import-missing/webpack.config.js
"use strict";

/** @type {import("../../../../").Configuration} */
module.exports = {
	bail: true
};
